--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
 <body>
 
   <div class="topnav">
-    <a href="#index">Home</a>
-    <a href="#userinfor">User Information</a>
+    <a href="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\public\index.html">Home</a>
+    <a href="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\public\UserInfor.html">User Information</a>
     <a href="#table">Table</a>
   </div>
 
