--- a/public/UserInfor.html
+++ b/public/UserInfor.html
@@ -40,7 +40,7 @@
   <div class="topnav">
     <a href="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\public\index.html">Home</a>
     <a href="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\public\UserInfor.html">User Information</a>
-    <a href="#table">Table</a>
+    <a href="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\public\table.html">Table</a>
   </div>
 
   <h1>About Me</h1>
