--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   <div class="topnav">
     <a href="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\public\index.html">Home</a>
     <a href="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\public\UserInfor.html">User Information</a>
-    <a href="#table">Table</a>
+    <a href="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\public\table.html">Table</a>
   </div>
 
   <h1>Welcome to My Page!</h1>
