Minor Edit-FINAL

--- a/public/UserInfor.html
+++ b/public/UserInfor.html
@@ -47,7 +47,7 @@
   <img src="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\static\img\HW1_headshot.jpg" alt="Headshot" style="width:325px;height:325px;">
 
   <div id="header">
-			<p id="name">Bobby Hill here. Nice to make your acquaintance:)<p/>
+			<p id="name">Bobby Hill here. Nice to make your acquaintance:)</p>
       <p>
       Made in the U.S.
       </p>
