--- a/public/UserInfor.html
+++ b/public/UserInfor.html
@@ -58,7 +58,7 @@
       <p>
       Go Manchester United FC!
       </p>
-      <img src="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\static\img\Manchester United FC.png" alt="Headshot" style="width:325px;height:325px;">
+      <img src="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\static\img\Manchester United FC.png" alt="Mascot" style="width:325px;height:325px;">
 
 
 	</div>
