Updated file path for images

--- a/public/UserInfor.html
+++ b/public/UserInfor.html
@@ -44,7 +44,7 @@
   </div>
 
   <h1>About Me</h1>
-  <img src="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\static\img\HW1_headshot.jpg" alt="Headshot" style="width:325px;height:325px;">
+  <img src="..\static/img/HW1_headshot.jpg" alt="Headshot" style="width:325px;height:325px;">
 
   <div id="header">
 			<p id="name">Bobby Hill here. Nice to make your acquaintance:)</p>
@@ -58,7 +58,7 @@
       <p>
       Go Manchester United FC!
       </p>
-      <img src="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\static\img\Manchester United FC.png" alt="Mascot" style="width:325px;height:325px;">
+      <img src="..\static/img/Manchester United FC.png" alt="Mascot" style="width:325px;height:325px;">
 
 
 	</div>
