--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
   </div>
 
   <h1>Welcome to My Page!</h1>
-  <img src="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\static\img\HW1_headshot.jpg" alt="Headshot" style="width:325px;height:325px;">
+  <img src="..\static/img/HW1_headshot.jpg" alt="Headshot" style="width:325px;height:325px;">
 
 </body>
 
