Minor update to the Table

--- a/public/table.html
+++ b/public/table.html
@@ -98,7 +98,7 @@
       <td>04/2/2012-04/1/2013</td>
     </tr>
     <tr>
-      <td>EY</td>
+      <td>Accenture</td>
       <td>Sara Hawkings</td>
       <td>United States</td>
       <td>04/2/2008-04/1/2011</td>
