After chatting with Professor Gregory

--- a/public/UserInfor.html
+++ b/public/UserInfor.html
@@ -38,13 +38,13 @@
 <body>
 
   <div class="topnav">
-    <a href="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\public\index.html">Home</a>
-    <a href="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\public\UserInfor.html">User Information</a>
-    <a href="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\public\table.html">Table</a>
+    <a href="index.html">Home</a>
+    <a href="UserInfor.html">User Information</a>
+    <a href="table.html">Table</a>
   </div>
 
   <h1>About Me</h1>
-  <img src="..\static/img/HW1_headshot.jpg" alt="Headshot" style="width:325px;height:325px;">
+  <img src="static/img/HW1_headshot.jpg" alt="Headshot" style="width:325px;height:325px;">
 
   <div id="header">
 			<p id="name">Bobby Hill here. Nice to make your acquaintance:)</p>
@@ -58,7 +58,7 @@
       <p>
       Go Manchester United FC!
       </p>
-      <img src="..\static/img/Manchester United FC.png" alt="Mascot" style="width:325px;height:325px;">
+      <img src="static/img/Manchester United FC.png" alt="Mascot" style="width:325px;height:325px;">
 
 
 	</div>
