--- a/public/table.html
+++ b/public/table.html
@@ -53,9 +53,9 @@
 <body>
 
   <div class="topnav">
-    <a href="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\public\index.html">Home</a>
-    <a href="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\public\UserInfor.html">User Information</a>
-    <a href="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\public\table.html">Table</a>
+    <a href="index.html">Home</a>
+    <a href="UserInfor.html">User Information</a>
+    <a href="table.html">Table</a>
   </div>
 
   <h1>Wanna Know More?</h1>
@@ -66,42 +66,49 @@
       <th>Contact</th>
       <th>Country</th>
       <th>Date</th>
+      <th>Salary($)</th>
     </tr>
     <tr>
       <td>Cummins Inc.</td>
       <td>Jennifer Hope</td>
       <td>Brazil</td>
       <td>Current</td>
+      <td>98k</td>
     </tr>
     <tr>
       <td>KPMG</td>
       <td>Thomas Gerry</td>
       <td>France</td>
       <td>05/2/2015-06/12/2017</td>
+      <td>96k</td>
     </tr>
     <tr>
       <td>Crowe</td>
       <td>Ricardo Albot</td>
       <td>France</td>
       <td>04/2/2014-04/1/2015</td>
+      <td>95k</td>
     </tr>
     <tr>
       <td>Deloitte</td>
       <td>Charles Darcy</td>
       <td>France</td>
       <td>04/2/2013-04/1/2014</td>
+      <td>88k</td>
     </tr>
     <tr>
       <td>EY</td>
       <td>Viggy Berry</td>
       <td>England</td>
       <td>04/2/2012-04/1/2013</td>
+      <td>80k</td>
     </tr>
     <tr>
       <td>Accenture</td>
       <td>Sara Hawkings</td>
       <td>United States</td>
       <td>04/2/2008-04/1/2011</td>
+      <td>75k</td>
     </tr>
   </table>
 
@@ -113,7 +120,9 @@
     Country:<br>
     <input type="text" name="country"><br>
     Date:<br>
-    <input type="text" name="date"><br>
+    <input type="date" name="date"><br>
+    Salary($):<br>
+    <input type="number" name="salary"><br>
 
   </form>
 
