--- a/public/index.html
+++ b/public/index.html
@@ -31,14 +31,15 @@
 <body>
 
   <div class="topnav">
-    <a href="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\public\index.html">Home</a>
-    <a href="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\public\UserInfor.html">User Information</a>
-    <a href="C:\Users\Lana\Documents\GitHub\ds-hw1-lameier233\public\table.html">Table</a>
+    <a href="index.html">Home</a>
+    <a href="UserInfor.html">User Information</a>
+    <a href="table.html">Table</a>
   </div>
 
   <h1>Welcome to My Page!</h1>
-  <img src="..\static/img/HW1_headshot.jpg" alt="Headshot" style="width:325px;height:325px;">
-
+<a href="static/img/H!_headshot-BIG.jgp">
+  <img src="static/img/HW1_headshot.jpg" alt="Headshot" style="width:325px;height:325px;">
+</a>
 </body>
 
 
