--- a/public/table.html
+++ b/public/table.html
@@ -131,8 +131,9 @@
 
   <script src="js/tablesort.min.js"></script>
   <script>
+    // Tablesort plugin http://tristen.ca/tablesort/demo/
     new Tablesort(document.getElementById('taskTable'));
   </script>
-  
+
 </body>
 </html>
