--- a/public/UserInfor.html
+++ b/public/UserInfor.html
@@ -37,6 +37,9 @@
 
 <body>
 
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>"
+<script src="js/profile.app.js"></script>
+
   <div class="topnav">
     <a href="index.html">Home</a>
     <a href="UserInfor.html">User Information</a>
@@ -54,7 +57,9 @@
       <p>
       I was born on 3/7/1970 and I currently live on 3041 Railroad St. I am 48 years old and happily married with three kids.
       </p>
-			<a href="mailto:bobby.hill37@example.com><p id="email">bobby.hill37@example.com</p></a>
+      <p>
+        <a href="mailto:bobby.hill37@example.com">bobby.hill37@example.com</a><br>
+      </p>
       <p>
       Go Manchester United FC!
       </p>
