Made email address clickable

--- a/public/UserInfor.html
+++ b/public/UserInfor.html
@@ -73,7 +73,7 @@
                         <td>
                           Email:
                         </td>
-                        <td>{{jsonResults.email}}</td>
+                        <td><a href="mailto:john@example.com">{{jsonResults.email}}</a></td>
                     </tr>
                     <tr>
                         <td>
