--- a/public/UserInfor.html
+++ b/public/UserInfor.html
@@ -83,6 +83,7 @@
                     </tr>
                 </tbody>
             </table>
+            <input type="button" value="Refresh" onclick="window.location.reload()">
         </div>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
