Fixed all lower-case

--- a/public/UserInfor.html
+++ b/public/UserInfor.html
@@ -43,13 +43,13 @@
                         <td>
                           First Name:
                         </td>
-                        <td>{{jsonResults.name.first}}</td>
+                        <td>{{jsonResults.name.first.toUpperCase()}}</td>
                     </tr>
                     <tr>
                         <td>
                           Last Name:
                         </td>
-                        <td>{{jsonResults.name.last}}</td>
+                        <td>{{jsonResults.name.last.toUpperCase()}}</td>
                     </tr>
                     <tr>
                         <td>
@@ -79,7 +79,7 @@
                         <td>
                           City:
                         </td>
-                        <td>{{jsonResults.location.city}}</td>
+                        <td>{{jsonResults.location.city.toUpperCase()}}</td>
                     </tr>
                 </tbody>
             </table>
