--- a/public/UserInfor.html
+++ b/public/UserInfor.html
@@ -83,9 +83,7 @@
                     </tr>
                 </tbody>
             </table>
-            <form>
-              <input type="button" onclick="history.go(0)" value="Refresh">
-            </form>
+            <button v-on:click="fetchUser()">Refresh</button>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
