--- a/public/UserInfor.html
+++ b/public/UserInfor.html
@@ -67,7 +67,7 @@
                         <td>
                           Age:
                         </td>
-                        <td>{{result.dob.age}}</td>
+                        <td>{{age(result.dob.date)}}</td>
                     </tr>
                     <tr v-for="result in jsonResults">
                         <td>
