--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <a href="table.html">Table</a>
   </div>
 
-  <h1>Welcome to My Page!</h1>
+  <h1>Welcome!</h1>
 <a href="static/img/H!_headshot-BIG.jgp">
   <img src="static/img/HW1_headshot.jpg" alt="Headshot" style="width:325px;height:325px;">
 </a>
