--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
     <a href="index.html">Home</a>
     <a href="UserInfor.html">User Information</a>
     <a href="table.html">Table</a>
+    <a href="comments.html">Comments</a>
   </div>
 
   <h1>Welcome!</h1>
