Added comments.html to all pages

--- a/public/UserInfor.html
+++ b/public/UserInfor.html
@@ -30,11 +30,12 @@
         <title>User Information</title>
     </head>
     <body>
-        <div class="topnav">
-            <a href="index.html">Home</a>
-            <a href="UserInfor.html">User Information</a>
-            <a href="table.html">Table</a>
-        </div>
+      <div class="topnav">
+        <a href="index.html">Home</a>
+        <a href="UserInfor.html">User Information</a>
+        <a href="table.html">Table</a>
+        <a href="comments.html">Comments</a>
+      </div>
         <div id="profileContainer" class="container">
             <h1>About Me</h1>
             <table class="table">
