--- a/public/table.html
+++ b/public/table.html
@@ -56,6 +56,7 @@
     <a href="index.html">Home</a>
     <a href="UserInfor.html">User Information</a>
     <a href="table.html">Table</a>
+    <a href="comments.html">Comments</a>
   </div>
 
   <h1>Wanna Know More?</h1>
