--- a/public/comments.html
+++ b/public/comments.html
@@ -96,11 +96,13 @@
   </tbody>
   </table>
 
-  <form>
+  <form id="newCommentForm" action="../../app/common.php" method="post">
     Comment ID:<br>
-    <input type="text" name="commentid"><br>
+    <input type="text" name="id"><br>
     Comment:<br>
     <input type="text" name="comment"><br>
+    <br>
+    <input type="submit" value="Submit">
   </form>
 
   <script src="js/tablesort.min.js"></script>
