Updated id name for "Comment"

--- a/public/comments.html
+++ b/public/comments.html
@@ -100,7 +100,7 @@
     Comment ID:<br>
     <input type="text" name="id"><br>
     Comment:<br>
-    <input type="text" name="comment"><br>
+    <input type="text" name="comment" id="comment"><br>
     <br>
     <input type="submit" value="Submit">
   </form>
