--- a/public/comments.html
+++ b/public/comments.html
@@ -61,14 +61,14 @@
 
   <h1>Comments</h1>
 
-  <table id="taskTable">
+  <table id="commentTable">
     <thead>
     <tr>
       <th>ID</th>
       <th>Comment</th>
     </tr>
     </thead>
-    <tbody>
+    <tbody id="commentTableBody">
     <tr>
       <td>Cummins Inc.</td>
       <td>Jennifer Hope</td>
@@ -97,12 +97,10 @@
   </table>
 
   <form id="newCommentForm" action="../../app/common.php" method="post">
-    Comment ID:<br>
-    <input type="text" name="id"><br>
     Comment:<br>
     <input type="text" name="comment" id="comment"><br>
     <br>
-    <input type="submit" value="Submit">
+    <input type="submit" value="Submit" id="submitNewComment">
   </form>
 
   <script src="js/tablesort.min.js"></script>
