Worked on the json file

--- a/public/comments.html
+++ b/public/comments.html
@@ -68,9 +68,9 @@
       <th>Comment</th>
     </tr>
     </thead>
-    <tr v-for="course in courses">
-        <td>{{ course.CourseId }}</td>
-        <td>{{ course.AuthorId }}</td>
+    <tr v-for="w in work">
+        <td>{{ w.id }}</td>
+        <td>{{ w.comment }}</td>
     </tr>
 
   </table>
