--- a/public/comments.html
+++ b/public/comments.html
@@ -68,9 +68,9 @@
       <th>Comment</th>
     </tr>
     </thead>
-    <tr v-for="w in work">
-        <td>{{ w.id }}</td>
-        <td>{{ w.comment }}</td>
+    <tr v-for="c in comment">
+        <td>{{ c.id }}</td>
+        <td>{{ c.comment }}</td>
     </tr>
 
   </table>
