--- a/public/comments.html
+++ b/public/comments.html
@@ -83,6 +83,7 @@
     </form>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="js/comments.js"></script>
 
 </body>
