--- a/public/comments.html
+++ b/public/comments.html
@@ -75,7 +75,7 @@
 
     </table>
 
-    <form id="newCommentForm" action="handleCommentPost" method="post">
+    <form id="newCommentForm" action="../api/comment.php" method="post">
       Comment:<br>
       <input type="text" name="comment" id="comment"><br>
       <br>
