--- a/public/comments.html
+++ b/public/comments.html
@@ -75,11 +75,14 @@
 
     </table>
 
-    <form id="newCommentForm" @submit.prevent="handleCommentPost">
-      Comment:<br>
-      <input type="text" name="comment" id="comment"><br>
-      <br>
-      <input type="submit" value="Submit" id="submitNewComment">
+    <form id="newCommentForm" @submit.prevent = "handleCommentPost">
+      <div class ="form-group row">
+        <label for="comment" class="col-sm-1 col-form-label"> Add Comment: </label>
+        <div>
+          <input type = "text" id="comment" v-model="commentForm.comment" class="form-control" required />
+        </div>
+        <button type ="submit" id="submitNewComment" class="btn btn-primary">Add Comment</button>
+      </div>
     </form>
   </div>
 
