--- a/public/comments.html
+++ b/public/comments.html
@@ -80,7 +80,7 @@
         <div>
           <input type = "text" id="comment" v-model="commentForm.comment" class="form-control" required />
         </div>
-        <button type ="submit" id="submitNewComment" class="btn btn-primary">Add Comment</button>
+          <button type ="submit" id="submitNewComment">Add Comment</button>
       </div>
     </form>
   </div>
