--- a/public/comments.html
+++ b/public/comments.html
@@ -75,12 +75,16 @@
 
     </table>
 
+    <p>
+      New Comment:
+    </p>
+
     <form id="newCommentForm" @submit.prevent = "handleCommentPost">
       <div class ="form-group row">
         <div>
           <input type = "text" id="comment" v-model="commentForm.comment" class="form-control" required />
         </div>
-          <button type ="submit" id="submitNewComment">Add Comment</button>
+          <button type ="submit" id="submitNewComment" class="btn btn-secondary btn-sm">Submit</button>
       </div>
     </form>
   </div>
